Fix broken UI when user has no notes

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,13 +4,17 @@
 }
 
 .createNoteButton2 {
-    font-size: 1.7em;
     height: 50px;
-    line-height: 43px;
     color: #006d71;
     cursor: pointer;
     border-top: 2px solid #9DD9D2;
     text-align: center;
+}
+
+.createNoteIcon {
+    height: 30px;
+    width: 30px;
+    padding: 10px;
 }
 
 .appContainer {
